glx/testdata/invalid/person-missing-id.glx
# Invalid: Entity has 'id' field (should only be map key)
persons:
  person-12345678:
    id: person-12345678
    version: "1.0"
    concluded_identity:
      primary_name: "Test Person"
